--- a/Appcamp_Frontend/SplitPage.xaml
+++ b/Appcamp_Frontend/SplitPage.xaml
@@ -19,6 +19,9 @@
             Source="{Binding Items}"
             d:Source="{Binding AllGroups[0].Items, Source={d:DesignInstance Type=data:SampleDataSource, IsDesignTimeCreatable=True}}"/>
     </Page.Resources>
+    <common:LayoutAwarePage.Background>
+        <ImageBrush/>
+    </common:LayoutAwarePage.Background>
 
     <!--
         This grid acts as a root panel for the page that defines two rows:
@@ -29,18 +32,27 @@
         Style="{StaticResource LayoutRootStyle}"
         DataContext="{Binding Group}"
         d:DataContext="{Binding AllGroups[0], Source={d:DesignInstance Type=data:SampleDataSource, IsDesignTimeCreatable=True}}">
+        <Grid.Background>
+            <ImageBrush ImageSource="Assets/bg.png"/>
+        </Grid.Background>
 
         <Grid.RowDefinitions>
             <RowDefinition Height="140"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition x:Name="primaryColumn" Width="610"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition x:Name="primaryColumn" Width="778"/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
         <!-- Back button and page title -->
-        <Grid x:Name="titlePanel">
+        <Grid x:Name="titlePanel" Grid.ColumnSpan="2" Margin="10,67,573,608" Grid.RowSpan="2">
+            <Grid.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                   
+                    <GradientStop Color="#FF20C6D6" Offset="1"/>
+                </LinearGradientBrush>
+            </Grid.Background>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
@@ -50,22 +62,11 @@
                 Click="GoBack"
                 IsEnabled="{Binding DefaultViewModel.CanGoBack, ElementName=pageRoot}"
                 Style="{StaticResource BackButtonStyle}"/>
-            <TextBlock x:Name="pageTitle" Grid.Column="1" Text="{Binding Title}" Style="{StaticResource PageHeaderTextStyle}"/>
+            <TextBlock x:Name="pageTitle" Style="{StaticResource PageHeaderTextStyle}" Text="Burbulo rikiavimo algortimas" Height="75" Margin="21,0,-25,5" FontSize="40" Grid.Column="1"/>
         </Grid>
 
         <!-- Vertical scrolling item list -->
-        <ListView
-            x:Name="itemListView"
-            AutomationProperties.AutomationId="ItemsListView"
-            AutomationProperties.Name="Items"
-            TabIndex="1"
-            Grid.Row="1"
-            Margin="-10,-10,0,0"
-            Padding="120,0,0,60"
-            ItemsSource="{Binding Source={StaticResource itemsViewSource}}"
-            IsSwipeEnabled="False"
-            SelectionChanged="ItemListView_SelectionChanged"
-            ItemTemplate="{StaticResource Standard130ItemTemplate}"/>
+        
 
         <!-- Details for selected item -->
         <ScrollViewer
@@ -76,27 +77,54 @@
             Padding="70,0,120,0"
             DataContext="{Binding SelectedItem, ElementName=itemListView}"
             d:DataContext="{Binding AllGroups[0].Items[0], Source={d:DesignInstance Type=data:SampleDataSource, IsDesignTimeCreatable=True}}"
-            Style="{StaticResource VerticalScrollViewerStyle}">
+            Style="{StaticResource VerticalScrollViewerStyle}" Foreground="#FF20C6D6" Margin="15,67,0,122">
+            <ScrollViewer.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    
+                    <GradientStop Color="#FF20C6D6" Offset="1"/>
+                </LinearGradientBrush>
+            </ScrollViewer.Background>
 
-            <Grid x:Name="itemDetailGrid" Margin="0,60,0,50">
+            <Grid x:Name="itemDetailGrid" Height="627" Width="372">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="14*"/>
+                    <RowDefinition Height="263*"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-
-                <Image Grid.Row="1" Margin="0,0,20,0" Width="180" Height="180" Source="{Binding Image}" Stretch="UniformToFill" AutomationProperties.Name="{Binding Title}"/>
-                <StackPanel x:Name="itemDetailTitlePanel" Grid.Row="1" Grid.Column="1">
-                    <TextBlock x:Name="itemTitle" Margin="0,-10,0,0" Text="{Binding Title}" Style="{StaticResource SubheaderTextStyle}"/>
-                    <TextBlock x:Name="itemSubtitle" Margin="0,0,0,20" Text="{Binding Subtitle}" Style="{StaticResource SubtitleTextStyle}"/>
+                <StackPanel x:Name="itemDetailTitlePanel" Grid.Row="1" Grid.Column="1" Margin="0,-20,-102,0">
+                    <TextBlock x:Name="itemSubtitle" Margin="0,0,0,20" Style="{StaticResource SubtitleTextStyle}"/>
+                    <TextBlock x:Name="itemTitle" Margin="0,-10,-112,0" Text="Algoritmai" Style="{StaticResource SubheaderTextStyle}" Height="64" FontSize="40"/>
                 </StackPanel>
-                <TextBlock Grid.Row="2" Grid.ColumnSpan="2" Margin="0,20,0,0" Text="{Binding Content}" Style="{StaticResource BodyTextStyle}"/>
+                <TextBlock Grid.Row="2" Grid.ColumnSpan="2" Margin="11,21,11,-22" Style="{StaticResource BodyTextStyle}" RenderTransformOrigin="0.996,0.542" Grid.RowSpan="2">
+                	<Run Text="Burbulo rikiavimo metodas – vienas iš paprastų, bet nelabai efektyvių rikiavimo algoritmų. Algoritmo principas – nuosekliai iš eilės peržiūrėti gretimų elementų poras, prireikus elementus sukeisti, perkeliant mažesnį arčiau pradžios. Tokiu būdu per pirmą iteraciją mažiausias elementas perkeliamas į pirmą poziciją, vėliau tas pats principas taikomas posekiui be pirmo elemento ir t. t."/>
+                	<LineBreak/>
+                	<Run/>
+                	<LineBreak/>
+                	<Run Text="Algoritmo veikimo principas primena virimo procesą, kai oro burbulai kyla į paviršių, dėl to jis ir vadinamas burbulo metodu."/>
+                	<LineBreak/>
+                	<Run/>
+                	<LineBreak/>
+                	<Run Text="Burbulo algoritmas N elementų masyvo rikiavimui naudoja apie N²/2 lyginimų ir N²/2 keitimų vietomis, tiek laukiamu, tiek ir blogiausiu atveju. Algoritmas nenaudoja papildomos atminties."/>
+                </TextBlock>
             </Grid>
         </ScrollViewer>
+        <TextBox HorizontalAlignment="Left" TextAlignment="Center" Grid.Row="1" TextWrapping="Wrap" Text="Pavyzdys:&#xD;&#xA;void Burbulas(int mas[], int n)&#xD;&#xA;{ &#xD;&#xA; int i, j, laik;&#xD;&#xA; for(j = 0; j &lt; n; j++)&#xD;&#xA; for(i = 0; i &lt; n - 1; i++)&#xD;&#xA; if(mas[i] &gt; mas[i+1])&#xD;&#xA; {&#xD;&#xA; laik = mas[i];&#xD;&#xA; mas[i] = mas[i+1];&#xD;&#xA; mas[i+1] = laik;    &#xD;&#xA; }  &#xD;&#xA;}" Width="783" FontFamily="Arial Black" FontWeight="Bold" FontSize="20" Margin="10,20,0,122" TextChanged="TextBox_TextChanged_1" Grid.ColumnSpan="2" BorderThickness="0">
+            <TextBox.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                   
+                    <GradientStop Color="#FF20C6D6" Offset="1"/>
+                </LinearGradientBrush>
+            </TextBox.Background>
+            <TextBox.Foreground>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                </LinearGradientBrush>
+            </TextBox.Foreground>
+        </TextBox>
 
         <VisualStateManager.VisualStateGroups>
 
