--- a/Appcamp_Frontend/SplitPage.xaml
+++ b/Appcamp_Frontend/SplitPage.xaml
@@ -46,7 +46,7 @@
         </Grid.ColumnDefinitions>
 
         <!-- Back button and page title -->
-        <Grid x:Name="titlePanel" Grid.ColumnSpan="2" Margin="10,67,573,608" Grid.RowSpan="2">
+        <Grid x:Name="titlePanel" Grid.ColumnSpan="2" Margin="10,67,573,0" Height="73" VerticalAlignment="Top">
             <Grid.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                    
@@ -61,8 +61,8 @@
                 x:Name="backButton"
                 Click="GoBack"
                 IsEnabled="{Binding DefaultViewModel.CanGoBack, ElementName=pageRoot}"
-                Style="{StaticResource BackButtonStyle}"/>
-            <TextBlock x:Name="pageTitle" Style="{StaticResource PageHeaderTextStyle}" Text="Burbulo rikiavimo algortimas" Height="75" Margin="21,0,-25,5" FontSize="40" Grid.Column="1"/>
+                Style="{StaticResource BackButtonStyle}" Margin="36,9,0,0" VerticalAlignment="Top"/>
+            <TextBlock x:Name="pageTitle" Style="{StaticResource PageHeaderTextStyle}" Text="Burbulo rikiavimo algortimas" Height="75" Margin="21,13,-25,0" FontSize="40" Grid.Column="1" VerticalAlignment="Top"/>
         </Grid>
 
         <!-- Vertical scrolling item list -->
@@ -113,7 +113,7 @@
                 </TextBlock>
             </Grid>
         </ScrollViewer>
-        <TextBox HorizontalAlignment="Left" TextAlignment="Center" Grid.Row="1" TextWrapping="Wrap" Text="Pavyzdys:&#xD;&#xA;void Burbulas(int mas[], int n)&#xD;&#xA;{ &#xD;&#xA; int i, j, laik;&#xD;&#xA; for(j = 0; j &lt; n; j++)&#xD;&#xA; for(i = 0; i &lt; n - 1; i++)&#xD;&#xA; if(mas[i] &gt; mas[i+1])&#xD;&#xA; {&#xD;&#xA; laik = mas[i];&#xD;&#xA; mas[i] = mas[i+1];&#xD;&#xA; mas[i+1] = laik;    &#xD;&#xA; }  &#xD;&#xA;}" Width="783" FontFamily="Arial Black" FontWeight="Bold" FontSize="20" Margin="10,20,0,122" TextChanged="TextBox_TextChanged_1" Grid.ColumnSpan="2" BorderThickness="0">
+        <TextBox TextAlignment="Center" Grid.Row="1" TextWrapping="Wrap" Text="Pavyzdys:&#xD;&#xA;void Burbulas(int mas[], int n)&#xD;&#xA;{ &#xD;&#xA; int i, j, laik;&#xD;&#xA; for(j = 0; j &lt; n; j++)&#xD;&#xA; for(i = 0; i &lt; n - 1; i++)&#xD;&#xA; if(mas[i] &gt; mas[i+1])&#xD;&#xA; {&#xD;&#xA; laik = mas[i];&#xD;&#xA; mas[i] = mas[i+1];&#xD;&#xA; mas[i+1] = laik;    &#xD;&#xA; }  &#xD;&#xA;}" FontFamily="Arial Black" FontWeight="Bold" FontSize="20" Margin="10,0,0,122" TextChanged="TextBox_TextChanged_1" BorderThickness="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Width="783">
             <TextBox.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                    
